--- a/deploy/tasks/toba.yml
+++ b/deploy/tasks/toba.yml
@@ -1,3 +1,5 @@
+- name: Descarga SIU - Toba
+  subversion: repo=https://repositorio.siu.edu.ar/svn/toba/trunk_versiones/{{toba_version}}/ dest={{toba_home}}
 - name: Instalar Toba
   script: install_toba.sh
   sudo: yes
