--- a/deploy/tasks/toba.yml
+++ b/deploy/tasks/toba.yml
@@ -6,7 +6,6 @@
   when: not (path.stat.isdir is defined and path.stat.isdir)
 - name: Instalar Toba
   script: install_toba.sh
-  when: toba_version == 2.6
   sudo: yes
   environment:
     NOMBRE_BASE: "{{toba_db_nombre}}"
@@ -16,6 +15,7 @@
     TOBA_PASS: "toba"
     HOME: "{{toba_home}}"
     PG_PORT: "{{pg_port}}"
+  when: toba_version == 2.6
 - name: Instalar Toba
   script: install_toba_new.sh
   sudo: yes
@@ -29,3 +29,15 @@
     PG_PORT: "{{pg_port}}"
     TOBA_INSTALACION_NAME: "{{toba_instalacion_name}}"
   when: toba_version != 2.6
+- name: Descargar proyectos via SVN 
+  subversion: repo={{item.value.url}} dest={{toba_home}}/proyectos/{{item.value.nombre}} username={{item.value.username}} password={{item.value.password}}
+  with_dict: proyectos
+  when: item.value.method is defined and item.value.method == "svn"
+- name: Cargar proyectos descargados
+  shell: printf "\n" | {{toba_home}}/bin/toba proyecto cargar -p {{item.value.nombre}} -i desarrollo
+  with_dict: proyectos
+  when: item.value.method is defined
+- name: Crear proyectos
+  shell: printf "\n" | {{toba_home}}/bin/toba proyecto crear -p {{item.value.nombre}} -i desarrollo
+  with_dict: proyectos
+  when: item.value.method is not defined
