--- a/deploy/tasks/composer.yml
+++ b/deploy/tasks/composer.yml
@@ -8,7 +8,7 @@
   tags: composer
 
 - name: make composer executable
-  file: path=/usr/local/bin/composer mode=a+x state=file
+  file: path=/usr/local/bin/composer mode=0555 state=file
   tags: composer
 
 # This playbook is get to https://github.com/Vinelab/ansible-composer
