Se instala toba cuando no hay proyectos
Cuando se creo el playbook que permite agregar proyectos propios a la
instalacion, se introdujo un pequeño bug que consistia en que si no se
configuraba ningun proyecto en el archivo vars/toba.yml, el instalador
no recibia el dict y fallaba.

Esto no permitia realizar una instalacion de Toba "limpia".

En este commit se agrega lo necesario para que se pueda instalar Toba
limpiamente.

--- a/deploy/tasks/toba.yml
+++ b/deploy/tasks/toba.yml
@@ -31,13 +31,13 @@
   when: toba_version != 2.6
 - name: Descargar proyectos via SVN 
   subversion: repo={{item.value.url}} dest={{toba_home}}/proyectos/{{item.value.nombre}} username={{item.value.username}} password={{item.value.password}}
-  with_dict: proyectos
+  with_dict: proyectos | default({})
   when: item.value.method is defined and item.value.method == "svn"
 - name: Cargar proyectos descargados
   shell: printf "\n" | {{toba_home}}/bin/toba proyecto cargar -p {{item.value.nombre}} -i desarrollo
-  with_dict: proyectos
+  with_dict: proyectos | default({})
   when: item.value.method is defined
 - name: Crear proyectos
   shell: printf "\n" | {{toba_home}}/bin/toba proyecto crear -p {{item.value.nombre}} -i desarrollo
-  with_dict: proyectos
+  with_dict: proyectos | default({})
   when: item.value.method is not defined
